Posts CRUD Routes (#22)
* Add update route for posts

* Wrap up initial crud routes for posts

* Update swagger

* Update message

* Update typings

* Remove clog
