# src/models/posts.model.ts
@@ -1,5 +1,4 @@
-export interface Post {
-  id: number;
+interface PostBody {
   post_title: string;
   league: Array<string>;
   prop_id: number;
@@ -7,17 +6,18 @@ export interface Post {
   headline: string;
   excerpt: string;
   featured_img: string;
-  published_at?: Date;
-  updated_at?: Date;
+}
+
+export interface Post extends PostBody {
+  id: number;
+  published_at: Date;
+  updated_at?: Date | null;
   deleted_at?: Date | null;
 }
 
-export interface PostCreate {
-  post_title: string;
-  league: Array<string>;
-  prop_id: number;
-  article_url: string;
-  headline: string;
-  excerpt: string;
-  featured_img: string;
+export type PostCreate = PostBody;
+
+export interface PostUpdate extends PostBody {
+  id: string | number;
+  updated_at: Date | null;
 }
